# beamer

./: .gitignore
gray_images/: CMakeLists.txt  main.cpp
